--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,41 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+main {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
+
+.row {
+  display: flex;
+}
+
+.tile {
+  height: 50px;
+  width: 50px;
+  border: 1px solid rgb(var(--foreground-rgb));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+p {
+  color: white;
+}
+
+.incorrect {
+  background: red;
+}
+
+.partially-correct {
+  background: yellow;
+}
+
+.correct {
+  background: green;
+}
